--- a/source/admin/views/admin/common/header.ejs
+++ b/source/admin/views/admin/common/header.ejs
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div id="header-logo" class="navbar-header">
             <a href="/" class="navbar-brand">
-                <img src="https://www.ctdb.hcmus.edu.vn/wp-content/uploads/2015/10/logo.png" alt="Managment" title="Managment">
+                <img src="/image/common/logo.png" alt="Managment" title="Managment">
             </a>
         </div>
         <div class="nav navbar-nav navbar-right">
