--- a/source/admin/views/admin/common/login.ejs
+++ b/source/admin/views/admin/common/login.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
 <body>
-    <div class="wrapper fadeInDown">
+    <div class="wrapper fadeInDown" id="loginForm">
         <div id="formContent">
           <!-- Tabs Titles -->
           <h2 class="active"> Sign In </h2>
