--- a/source/admin/views/admin/student/studentAdd.ejs
+++ b/source/admin/views/admin/student/studentAdd.ejs
@@ -152,7 +152,7 @@
                 }
             });
         });
-        $('#saveStudent').on('click', function(e) {
+        $('#ou').on('click', function(e) {
             $("#frmAddStudent").submit();
         });
    });
