--- a/source/admin/views/admin/account/edit.ejs
+++ b/source/admin/views/admin/account/edit.ejs
@@ -62,13 +62,15 @@
                                     </select>
                                 </div>
                             </div>
+                            <%if (!user.roll) { %>
                             <div class="form-group">
                                 <label class ="col-sm-2 control-label" for="my-input">Description:</label>
                                 <div class="col-sm-10">
                                     <textarea  class="form-control" type="text" name="description" ><%=user.description%></textarea>
                                 </div>
                             </div>
-                           
+                            <% } %>
+
                             <div class="form-group">
                                 <label class ="col-sm-2 control-label" for="my-input">Password:</label>
                                 <div class="col-sm-10">
