--- a/source/admin/views/index/home.ejs
+++ b/source/admin/views/index/home.ejs
@@ -1,66 +1,187 @@
-<style>
-    .prom-courses,
-    .most-view-courses,
-    .latest-courses {
-        display: inline-block;
-    }
+<!DOCTYPE html>
+<html lang="en">
 
-    .courses-detail {
-        display: none;
-    }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/css/fileinput.min.css">
+  <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/public/css/layout.css">
+  </link>
+  <link rel="shortcut icon" href="/public/logo.png" />
+</head>
 
-    .prom-courses:hover .courses-detail {
-        display: block;
-    }
+<body>
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/js/fileinput.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/themes/fa/theme.min.js"></script>
+  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
 
-    .most-view-courses:hover .courses-detail {
-        display: block;
-    }
 
-    .latest-courses:hover .courses-detail {
-        display: block;
-    }
+  <link rel="stylesheet" href="/css/testhomepage.css">
 
-    .prom-courses,
-    .latest-courses,
-    .most-view-courses {
-        margin: auto;
-        width: 285px;
-        text-overflow: ellipsis;
-        position: sticky;
-    }
 
-    .fake-link {
-        cursor: pointer;
-    }
-</style>
-<div class="jumbotron">
-    <%- include('../partials/toolbar', {isAuthenticated: isAuthenticated});  %> 
-</div>
-<div>
-    <h2>Các khóa học nổi bật nhất tuần qua</h2>
-    <% for( let i = 0; i < proCourses.length; i++ ) { %>
-    <a href="/course/<%= proCourses[i].name %>">
-        <div class="prom-courses">
-            <div class="courses">
-                <img class="poster" src="<%= proCourses[i].poster%>" width="285px" height="150px">
-                <h4 class="name"><%=  proCourses[i].name%> </h4>
-                <p class="lecturer"><%=  proCourses[i].idLecturer.name%></p>
-                <p class="evaluation" style="display: inline-block;"><%=  proCourses[i].evaluationPoint%></p>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <p style="display: inline-block;" class="numberOfEvaluation"><%=  proCourses[i].numberOfEvaluation%>
-                </p>
-                <p class="tuition">$<%=  proCourses[i].tuition%></p>
-            </div>
-            <div class="courses-detail">
-                <p><%=  proCourses[i].numberOfStudent%> Studying</p>
-                <p><%=  proCourses[i].idCourseTopic.name%></p>
-            </div>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap files (jQuery first, then Popper.js, then Bootstrap JS) -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+    type="text/javascript"></script>
+
+  </head>
+
+  <body>
+    <header id="header" class="navbar navbar-static-top">
+      <div class="container-fluid">
+        <div class="col-sm-2">
+          <div id="header-logo" class="navbar-header">
+            <a href="/" class="navbar-brand">
+              <img src="/logo.png" alt="Managment" title="Managment" />
+            </a>
+          </div>
         </div>
-    </a>
-    <% } %>
-</div>
+        <div class="col-sm-2 menu">
+          <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"> Category </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Business <i class="fas fa-chevron-right"></i></a>
+                <ul class="submenu dropdown-menu">
+                  <li><a class="dropdown-item" href="">Sales</a></li>
+                  <li><a class="dropdown-item" href="">Communication</a></li>
+                  <li><a class="dropdown-item" href="">Managment</a>
+                  </li>
+                </ul>
+              </li>
+              <li><a class="dropdown-item" href="#"> Development <i class="fas fa-chevron-right"></i></a>
+                <ul class="submenu dropdown-menu">
+                  <li><a class="dropdown-item" href="">Game Development</a></li>
+                  <li><a class="dropdown-item" href="">Mobile Development</a></li>
+                  <li><a class="dropdown-item" href="">Programing Language </a>
+                  </li>
+                  <li><a class="dropdown-item" href="">Data Science</a></li>
+                </ul>
+              </li>
+              <li><a class="dropdown-item" href="#"> Design <i class="fas fa-chevron-right"></i></a>
+                <ul class="submenu dropdown-menu">
+                  <li><a class="dropdown-item" href="">Design Tools</a></li>
+                  <li><a class="dropdown-item" href="">Web Design</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-5 search">
+          <form class="form-inline">
+            <div class="row">
+              <div class="col-sm-8">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+              </div>
+              <div class="col-sm-4">
+                <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">
+                  Search
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-sm-3 featured">
+          <div class="row">
+            <% if (!isAuthenticated) { %>
+              <div class="col-sm-4">
+                <a href="/users/login">
+                  <i class="fas fa-sign-in-alt"></i>Login
+                </a>
+              </div>
+              <div class="col-sm-4">
+                <a href="/users/register">
+                  <i class="fas fa-user-plus"></i>Register
+                </a>
+              </div>
+              <% }else{ %>
+                <!-- <div class="col-sm-6">
+                  <a href="/my-courses">
+                    <i class="fas fa-folder-open" style="color: darkorange;"></i> My Courses
+                  </a>
+                </div>
+                <div class="col-sm-6">
+                  <a href="/my-wish-list">
+                    <i class="fa fa-heart" aria-hidden="true" style="color: crimson;"></i>Wish list
+                  </a>
+                </div> -->
+                <div class="col-sm-6 ">
+                  <div class="nav-item dropdown">
+
+                    <a href="/users/account" data-toggle="dropdown" class="nav-link dropdown-toggle">
+                      <i class="fas fa-user-circle"></i> Võ Thế Minh 
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/my-courses">
+                          <i class="fas fa-folder-open"></i> My Courses
+                        </a>
+                      </li>
+                      <li><a href="/my-courses">
+                        <i class="fa fa-heart" aria-hidden="true"></i>Wish list
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+
+                </div>
+                <div class="col-sm-4 logout text-right">
+                  <a href="/users/logout">
+                    <i class="fas fa-sign-out-alt"></i>Logout
+                  </a>
+                </div>
+
+                <% } %>
+
+
+          </div>
+
+        </div>
+      </div>
+    </header>
+    <div style="height:3000px;"></div>
+  </body>
+  <script>
+    $(document).ready(function () {
+      // jQuery code
+
+      //////////////////////// Prevent closing from click inside dropdown
+      $(document).on('click', '.dropdown-menu', function (e) {
+        e.stopPropagation();
+      });
+
+      // make it as accordion for smaller screens
+      if ($(window).width() < 992) {
+        $('.dropdown-menu a').click(function (e) {
+          e.preventDefault();
+          if ($(this).next('.submenu').length) {
+            $(this).next('.submenu').toggle();
+          }
+          $('.dropdown').on('hide.bs.dropdown', function () {
+            $(this).find('.submenu').hide();
+          })
+        });
+      }
+      $(window).bind('scroll', function () {
+          if ($(window).scrollTop() > 100) {
+              $('#header').addClass('fixed');
+          } else {
+              $('#header').removeClass('fixed');
+          }
+      });
+    });
+  </script>
+
+</html>
